# mathlibrary

./: BBox.cpp  BSphere.cpp  CMakeLists.txt  Mat4.cpp  MathLib.cpp  MathLib.h  README.md  Vec3.cpp
galekmath/: BBox.cpp  BBox.h  BSphere.cpp  BSphere.h  CMakeLists.txt  Mat4.cpp  MathLib.cpp  MathLib.h  Quat.cpp  Vec2.cpp  Vec4.cpp  galekmath_config.h  galekmath_config.h.in
